# chat-room

./: .gitignore  README.md  chat-room.hpp
c-client/: Makefile
client/: CMakeLists.txt  build.sh  client.c  client.cpp  client.hpp  client_entry.cpp  client_ui.cpp  pool_messages.cpp  pool_messages.hpp
legacy/: Makefile
legacy/c-client/: client.c
legacy/c-server/: server.c
server/: CMakeLists.txt  build.bat  build.sh  server  server.c  server.cpp  server.hpp  server_entry.cpp
